fix: filter horizontal scroll on mobile

--- a/source/sass/blocks/filter-form.scss
+++ b/source/sass/blocks/filter-form.scss
@@ -229,4 +229,8 @@
   @media (min-width: 1024px) {
     display: none;
   }
+
+  @media (max-width: 767px) {
+    transform: translate(15%, -50%);
+  }
 }
